# Wordle-game

./: .gitignore  README.md  main.spec  pyproject.toml
wordle_game/: main.py  not_ready.py  not_ready1.py  worlde_game.py
