[tool.poetry]
name = "wordle-game"
version = "0.1.0"
description = ""
authors = ["MPHRS <serafimin2002@gmail.com>"]
readme = "README.md"
packages = [{include = "wordle_game"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"
pygame-textinput = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
